blurry png fix?

--- a/resources/assets/styles/components/_post-col-3.scss
+++ b/resources/assets/styles/components/_post-col-3.scss
@@ -25,7 +25,10 @@
 
 .postCard.-col-3 .postCard {
   &__image {
-    img {}
+    img {
+      width: 100%;
+      height: auto;
+    }
 
     &::after {
       content: "";
